--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,27 @@
         android:theme="@style/Theme.DesignThinkingProject"
         tools:targetApi="31">
         <activity
+            android:name=".megaFollowCoffee9Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".megaFollowCoffee8Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".megaFollowCoffee7"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".megaFollowSnack.megaFollowSnack6Activity"
             android:exported="false">
             <meta-data
@@ -244,49 +265,42 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffeeQRActivity"
+            android:name=".megaFollow8QrActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffee6Activity"
+            android:name=".megaFollow6ExtralorderActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffee5SelectActivity"
+            android:name=".megaFollowCoffee5Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffee5Activity"
+            android:name=".megaFollowCoffee4Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffee4Activity"
+            android:name=".megaFollowCoffee3Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".megaFollowcoffee3Activity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".megaFollowcoffee2Activity"
+            android:name=".megaFollowCoffee2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
